add countdown offer section + styling. Implement npm package: react-countdown-now for dynamic countdown

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
-@import 'pages//Landing.scss';
-@import 'components/Navigation/Navigation.scss';
+@import './pages//Landing.scss';
+@import './components/Navigation/Navigation.scss';
+@import './components/Offers/Offers.scss';
 
 .landing {
   height: 100vh;
