add guarantee component

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import './pages//Landing.scss';
 @import './components/Navigation/Navigation.scss';
 @import './components/Offers/Offers.scss';
+@import './components//Guarantee/Guarantee.scss';
 
 .landing {
   min-height: 100vh;
