--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -43,3 +43,17 @@
     margin-right: auto;
   }
 }
+
+@media (max-width: 930px) {
+  .navigation {
+    &__list {
+      padding: 0;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    &__logo {
+      margin: 0 auto;
+    }
+  }
+}
