--- a/src/pages/Landing.scss
+++ b/src/pages/Landing.scss
@@ -7,3 +7,10 @@ main {
   margin: 0 auto;
   justify-content: space-evenly;
 }
+
+@media (max-width: 920px) {
+  main {
+    flex-direction: column;
+    align-items: center;
+  }
+}
